plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/tier0/kmmLibrary/src/jvmMain/kotlin/kmmApplication/jvmMain_api.kt
package kmmApplication

actual class <!LINE_MARKER("descr='Has expects in project.commonMain module'")!>CommonMainExpect<!> {
    actual fun <!LINE_MARKER("descr='Has expects in project.commonMain module'"), LINE_MARKER("descr='Implements function in CommonMainExpect (kmmApplication) Press ... to navigate'")!>commonMainApi<!>() { }

    fun jvmSpecificApi() { }
}
